# mrsmap

./: CMakeLists.txt  LICENSE.txt  ProjectHome.md  README
include/mrsmap/registration/: multiresolution_csurfel_registration.h
include/mrsmap/utilities/: utilities.h
include/mrsmap/visualization/: visualization_map.h  visualization_slam.h
src/apps/: evaluate_pose_tracking.cpp  evaluate_slam.cpp  evaluate_visual_odometry.cpp  train_objectmap.cpp
src/map/: multiresolution_csurfel_map.cpp
src/registration/: multiresolution_csurfel_registration.cpp
src/slam/: slam.cpp
src/utilities/: utilities.cpp
src/visualization/: visualization_map.cpp  visualization_slam.cpp
trunk/: README
trunk/include/mrsmap/map/: multiresolution_csurfel_map.h
trunk/include/mrsmap/registration/: multiresolution_csurfel_registration.h
trunk/include/mrsmap/slam/: slam.h
trunk/src/apps/: evaluate_pose_tracking.cpp  evaluate_slam.cpp  evaluate_visual_odometry.cpp  mrsslam_app.cpp
trunk/src/registration/: multiresolution_csurfel_registration.cpp
trunk/src/slam/: slam.cpp
